TWC3167-5687, TWC3167-5760, TWC3167-5753, TWC3167-5681, TWC3167-5688 - Admin : UI Dropdown filer, Legal exception deal list pop up, Contract : Lnav alignment issue, Dashboard scroll, recent URL scroll issue - UI Bug Fixes (#2061)

--- a/Intel.MyDeals/Client/src/app/admin/legalException/admin.legalException.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/legalException/admin.legalException.component.css
@@ -316,3 +316,11 @@
 #legalGrid.k-grid .k-grid-content {
     overflow: overlay !important;
 }
+
+.dealList.viewDealListed {
+    height: auto !important;
+}
+
+.mat-dialog-container:has(.dealList.viewDealListed) {
+    padding-bottom: 20px;
+}
