--- a/Intel.MyDeals/Client/src/app/dashboard/dashboard/dashboard.component.css
+++ b/Intel.MyDeals/Client/src/app/dashboard/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@
 div.overFlowWidget {
     width: auto;
     height: calc(100vh - 12vh) !important;
-    /* overflow: auto !important */
+    overflow: auto !important 
 }
 
 div.overFlowWidget>div.row {
