--- a/Intel.MyDeals/Client/src/app/dashboard/recentURL/recentsUrlWidget.component.css
+++ b/Intel.MyDeals/Client/src/app/dashboard/recentURL/recentsUrlWidget.component.css
@@ -1,4 +1,5 @@
  .all-permit-recents {
+     overflow-x: hidden;
      overflow-y: auto;
      width: 100%;
      height: 100% !important;
